src/objects/loan__Recovery_Order__c.object
<CustomObject>
    <fields>
        <fullName>loan__Amount_Type__c</fullName>
        <label>Balance Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Product__c</fullName>
        <label>Loan Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipName>Recovery_Order</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>loan__Order_Number__c</fullName>
        <description>1
2
3
4</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Spread</label>
    <nameField>
        <displayFormat>ROID-{00000}</displayFormat>
        <label>Recovery Order ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Spread</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>